# C14-projeto-sala

./: .gitignore  01_gerenciamento_de_dependencia.py  01_tabela_RBE.py  README.md  pyproject.toml
.github/workflows/: python-package-pip.yml
auxiliar/: BTD6 Rounds RBE - Rounds.csv  balloons.csv  requirements.txt
code/app/: main.py  test_datasetManager.py
code/app/bloons/: Bloon.py
code/app/dataManager/: DatasetManager.py
code/app/frontEnd/: InterfaceTerninal.py
code/bloons/: Bloon.py
code/dataManager/: DatasetManager.py
code/frontEnd/: InterfaceTerninal.py
scripts/: enviando_email.sh  enviar_email.py
src/: main.py
src/app/dataManager/: DatasetManager.py
src/app/frontEnd/: InterfaceTerminal.py
src/teste/: test_DatasetManager.py  test_InterfaceTerminal.py
